# cavewhere

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  AGENTS.md  AbstractPainterPathModel.cpp  AbstractPainterPathModel.h  CLAUDE.md  CMakeLists.txt  Cavewhere.pro  Cavewhere.rc  CenterlinePainterModel.cpp  CenterlinePainterModel.h  FixedGridModel.cpp  FixedGridModel.h  GitHash.cmake  IncludeQMath3d.pri  InfiniteGrid.qml  InfiniteGridModel.cpp  InfiniteGridModel.h  Info.plist.in  LICENSE.txt  LicenseTemplate  Main.qml  MovingAverageProxyModel.cpp  MovingAverageProxyModel.h  PainterPathModel.cpp  PainterPathModel.h  PenLineModel.cpp  PenLineModel.h  PenLineView.cpp  PenLineView.h  README.md  RootData.cpp  RootData.h  ShapePathInstantiator.qml  SketchPage.qml  SketchShapePath.h  TextModel.cpp  TextModel.h  (+11 more)
.github/: aqt.ini
.moc/: moc_cwAbstractProjection.cpp  moc_cwMatrix4x4Animation.cpp  moc_cwOrthogonalProjection.cpp  moc_cwPerspectiveProjection.cpp
asan/: suppressedLeaks.txt
autoBuild/: autoBuild.qbs  build-cavewhere-linux-bionic.sh
cavewherelib/: AboutPage.qml  AddAndSearchBar.qml  AddButton.qml  AllCavesTabWidget.qml  AskToSaveDialog.qml  BackSightCalibrationEditor.qml  BackSightReadingBox.qml  Break.qml  BreakLine.qml  BundleProjData.cmake  Button.qml  ButtonGroup.qml  CMakeLists.txt  CSVImporterPage.qml  CWButton.qml  CalibrationEditor.qml  CameraAzimuthSettings.qml  CameraOptionsTab.qml  CameraProjectionSettings.qml  CameraVerticalAngleSettings.qml  CaptureItemInteraction.qml  CaveDataSidebarPage.qml  CaveLeadPage.qml  CaveLengthAndDepth.qml  CaveLengthComponent.qml  CavePage.qml  CaveTabWidget.qml  CaveTreeDelegate.qml  CavewhereLogo.qml  CavewhereMainWindow.qml  CheckBox.qml  CheckBoxWithInfo.qml  CheckPlistVersion.cmake  CheckableGroupBox.qml  ChoosePaperSizeInteraction.qml  ClickTextInput.qml  ClinoReadBox.qml  ColorsPage.qml  ColumnNameDelegate.qml  ColumnNameDropArea.qml  (+164 more)
cavewherelib/fonts/: cwFonts.qrc  fonts.qrc
cavewherelib/palettes/cavewhere-default/: palette.json
cavewherelib/palettes/cavewhere-default/brushes/: ceiling-step.cwbrush  feature.cwbrush  floor-step.cwbrush  scrap-outline.cwbrush  wall.cwbrush
cavewherelib/palettes/cavewhere-default/glyphs/: ceiling-step-dash.cwglyph  ceiling-step-tick.cwglyph  floor-step-tick.cwglyph
cavewherelib/qml/: AboutPage.qml  AddAndSearchBar.qml  AddNoteMenu.qml  AddNoteMenuButton.qml  AddRulePopup.qml  AddSurveyFileDialog.qml  AppearanceSettingsItem.qml  AskToSaveDialog.qml  AttachExternalCenterlineDialog.qml  AutoHideErrorBox.qml  BackSightCalibrationEditor.qml  BasePointHandler.qml  BodyText.qml  BreakLine.qml  BrushEditorPanel.qml  BrushPicker.qml  Button.qml  ButtonGroup.qml  ButtonShake.qml  CSComboBox.qml  CSCustomDialog.qml  CSVImporterPage.qml  CalibrationEditor.qml  CameraAzimuthSettings.qml  CameraOptionsTab.qml  CameraProjectionSettings.qml  CameraVerticalAngleSettings.qml  CaveLeadPage.qml  CaveLengthComponent.qml  CavePage.qml  CaveTripContextMenu.qml  CavernOutputPage.qml  CavewhereLogo.qml  CavewhereMainWindow.qml  CheckBox.qml  CheckBoxWithInfo.qml  CheckableGroupBox.qml  ChoosePaperSizeInteraction.qml  ChooseTripComponentDialog.qml  ClickNumberInput.qml  (+244 more)
cavewherelib/shaders/: EDL.frag  EDL.vert  LinePlot.frag  LinePlot.vert  PointCloud.frag  PointCloud.vert  colorOverlay.frag  grid.frag  grid.vert  imageItem.frag  oit_composite.frag  oit_composite.vert  oit_weighted.frag  radial_gradient.frag  radial_gradient.vert  scrap.frag  scrap.vert  shaders.qrc  toColor.frag  unlit.frag  unlit.vert
cavewherelib/shaders/compass/: compass.frag  compass.vert  compass.vsh  compassShadowOutput.frag  compassShadowOutput.vsh
cavewherelib/src/: RepositoryModel.h  cavewhere.proto  cavewhereLib.qbs  cavewhereVersion.h.in  cavewhere_common.proto  cavewhere_symbology.proto  cw3dRegionViewer.cpp  cw3dRegionViewer.h  cwAbstract2PointItem.cpp  cwAbstract2PointItem.h  cwAbstractHeadTracker.cpp  cwAbstractHeadTracker.h  cwAbstractNoteTransformation.cpp  cwAbstractNoteTransformation.h  cwAbstractPointManager.cpp  cwAbstractPointManager.h  cwAbstractProjection.cpp  cwAbstractProjection.h  cwAbstractRule.cpp  cwAbstractRule.h  cwAbstractScrapViewMatrix.h  cwAbstractSketchPainterPathModel.cpp  cwAbstractSketchPainterPathModel.h  cwAddImageTask.cpp  cwAddImageTask.h  cwAppearanceOverride.h  cwAppearanceSlotted.cpp  cwAppearanceSlotted.h  cwApplication.cpp  cwApplication.h  cwArtifact.cpp  cwArtifact.h  cwAttachedCenterlinesModel.cpp  cwAttachedCenterlinesModel.h  cwAzimuthReference.cpp  cwAzimuthReference.h  cwBaseNoteLeadInteraction.cpp  cwBaseNoteLeadInteraction.h  cwBaseNoteLiDARStationInteraction.cpp  cwBaseNoteLiDARStationInteraction.h  (+1025 more)
cavewherelib/src/cwPlacementRules/: cwAlignToTangentRule.cpp  cwAlignToTangentRule.h  cwBendingStampRule.cpp  cwBendingStampRule.h  cwExplicitPointRule.cpp  cwExplicitPointRule.h  cwJointedStampRule.cpp  cwJointedStampRule.h  cwOffsetStrokeRule.cpp  cwOffsetStrokeRule.h  cwRigidStampRule.cpp  cwRigidStampRule.h  cwStampRuleBase.cpp  cwStampRuleBase.h  cwTraceOffsetPolylineRule.cpp  cwTraceOffsetPolylineRule.h  cwTracePolylineRule.cpp  cwTracePolylineRule.h  cwTraceRule.cpp  cwTraceRule.h  cwUniformSpacingRule.cpp  cwUniformSpacingRule.h
cavewherelib/src/rendering/: cwKeywordFilterModel.h
cavewherelib/src/utils/: Forsyth.cpp  cwTriangulate.cpp  cwTriangulate.h  vcacheopt.h
cmake/: CavewhereAbseilLink.cmake  CavewhereAndroid.cmake  CavewhereAppleBundle.cmake  CavewhereConanBuildEnv.cmake  CavewhereLinuxDeploy.cmake  CavewhereVersion.cmake  CavewhereWindowsRuntime.cmake
conan/: auto-setup-cross.cmake  conan_host_extra_vars.cmake  ios_RelWithDebInfo_host.profile.txt  ios_host.profile  ios_release_host.profile.txt  ios_vars.cmake
dewalls/: dewalls.qbs  main.cpp
docs/: addNewTypesForMerge.md  android-build.md  asan-debug-build.md  cavewhere-format-spec.md  ios-build.md  privacy-policy.txt
fonts/: fonts.qrc
installer/: installer.cmake  installer.qbs
ios/: Info.plist.in  LaunchScreen.storyboard  makeIcon.sh
plans/: ACCEPT_ALL_WARNINGS_PLAN.md  ADD_TRIP_UX_PLAN.html  (+98 more)
(+2111 files in other folders)
